MDEV-5103: server crashed on singular Item_equal

Singular Item_equal support added.

The problem was that during constant table substitution Item_equal become containing only one constant which was not supported internally.